[package]
name = "wren"
version = "0.1.12"
authors = ["Calvin Ikenberry"]
description = "Bindings to the Wren scripting language API"
readme = "README.md"
keywords = ["wren", "bindings", "wrapper"]
license = "MIT"
homepage = "https://github.com/calviken/wren-rust"
repository = "https://github.com/calviken/wren-rust"
documentation = "https://docs.rs/wren"
edition = "2018"

[dependencies.wren-sys]
version = "0.2.5"
path = "./wren-sys"

[dependencies]
libc = "0.2"

[dev-dependencies]
lazy_static = "1.2.0"
